# rvisioncase

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci_cd.yml
config/: rvision.json
docker/: CMakeLists.txt  Dockerfile.dev
src/app/: app.cpp  app.hpp
src/core/: error.cpp  error.hpp  headers.hpp  logger.hpp
src/http/server/: dispatcher.cpp  dispatcher.hpp  factory.cpp  factory.hpp  handler.cpp  handler.hpp  server.cpp  server.hpp
src/http/utils/: executor.hpp  params.cpp  params.hpp  uri.cpp  uri.hpp
src/lines/db/: lines_db.cpp  lines_db.hpp
src/lines/poller/: lines_poller.cpp  lines_poller.hpp
src/lines/provider/: lines_provider.cpp  lines_provider.hpp
src/lines/utils/: line_info.hpp
src/main/: main.cpp
src/rpc/client/: client.cpp  client.hpp
src/rpc/messages/: rvision.proto
src/rpc/server/: server.cpp  server.hpp
tests/client/: app.cpp  app.hpp
tests/http/: test.cpp
tests/lines/: test.cpp
tests/rpc/: test.cpp
tests/web/: app.cpp  app.hpp  main.cpp
